--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1725,6 +1725,51 @@ div.rta__autocomplete.str-chat__emojisearch {
   padding: 10px;
 }
 
+.alert {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transition: all 0.5s;
+  transform: translateY(200%);
+  opacity: 0;
+  min-width: 300px;
+  padding: 15px 30px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  border-radius: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.alert.alert--open {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.alert__text {
+  text-align: center;
+  width: 100%;
+  font-weight: 600;
+}
+
+.alert__icon {
+  display: flex;
+  opacity: 0.9;
+  font-size: 22px;
+  margin-right: 12px;
+}
+
+.alert__icon-root {
+  fill: currentColor;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  font-size: 1.5rem;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  flex-shrink: 0;
+  user-select: none;
+}
+
 @media screen and (max-width: 960px) {
   .channel-list__container {
     display: none;
